--- a/Appendix.tex
+++ b/Appendix.tex
@@ -45,8 +45,8 @@ where ${\bf B}=\{0,1\}^{2n}.$ The above map corresponds to the following correct
 Moreover, the complex coefficients $\beta_i$ are construction by adding and multiplying numbers from the set $\left\{\frac{1+i}{2},\frac{1-i}{2}\right\}.$ We note the following properties these numbers
 
  $$\left(\frac{1+i}{2}\right)\pm \left(\frac{1-i}{2}\right)=\pm1.$$
-$$ \hspace{4cm}\left(\frac{1\pm i}{2}\right)^m=\left(\frac{\pm i}{2}\right)^l, \mbox{ when $m$ odd postive integer}$$
- $$\hspace{4cm}\left(\frac{1\pm i}{2}\right)^m=\left(\frac{\pm i}{2}\right)^l \left(\frac{1\pm i}{2}\right), \mbox{ when $m$ even postive integer}$$
+$$ \hspace{4cm}\left(\frac{1\pm i}{2}\right)^m=\left(\frac{a}{2}\right)^l, a\in\{\pm 1,\pm i\} \mbox{ and $m$ odd postive integer}$$
+ $$\hspace{4cm}\left(\frac{1\pm i}{2}\right)^m=\left(\frac{a}{2}\right)^l \left(\frac{1\pm i}{2}\right), a\in\{\pm 1,\pm i\}\mbox{ and  $m$ even postive integer}$$
   
  
 
