remove more.bib

--- a/main.tex
+++ b/main.tex
@@ -107,7 +107,7 @@ This material is based upon work supported by the Air Force Office of Scientific
 
 \bibliographystyle{bst/alphaarxiv}
 %\bibliography{bib/full,bib/quantum,bib/more}
-\bibliography{bib/full.bib/quantum.bib}
+\bibliography{bib/full,bib/quantum}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
